--- a/style.css
+++ b/style.css
@@ -20,22 +20,21 @@ body {
   border-radius: 30px;
 }
 
+#game-container .fondo{
+  width: 100%;
+  height: 100%;
+}
+
 .personaje {
   position: absolute;
-  width: 50px;
-  height: 50px;
-  background-color: #07a07c;
-  border-radius: 50%;
-  border: 5px solid #07a050;
+  width: 100px;
+  height: 100px;
 }
 
 .moneda {
   position: absolute;
   width: 30px;
   height: 30px;
-  background-color: gold;
-  border-radius: 50%;
-  box-shadow: 0 0 10px 2px rgba(255, 223, 0, 0.8);
 }
 
 #puntos {
