--- a/style.css
+++ b/style.css
@@ -34,8 +34,10 @@ body {
 
 .moneda {
   position: absolute;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 100%;
 }
 
 #puntos {
